--- a/docusaurus/src/css/custom.css
+++ b/docusaurus/src/css/custom.css
@@ -42,3 +42,77 @@
   padding: 8px;
   width: 33%;
 }
+
+.icons-list-container {
+  margin: 16px 0;
+}
+
+.icons-list-icon-container {
+  appearance: none;
+  border: 0;
+  background: 0;
+  outline: 0;
+  display: flex;
+  flex-direction: column;
+  width: 124px;
+  height: 124px;
+  align-items: center;
+  text-align: center;
+
+  @media (max-width: 680px) {
+    width: 96px;
+  }
+}
+
+.icons-list-icon {
+  display: block;
+  margin: 16px;
+  font-family: 'MaterialCommunityIcons';
+  font-size: 48px;
+  color: var(--theme-text-color);
+}
+
+.icons-list-icon-name {
+  display: block;
+  font-size: 12px;
+  color: var(--theme-text-color);
+}
+
+.icons-list-results {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin: 24px 0;
+
+  &:last-child {
+    justify-content: flex-start;
+  }
+}
+
+.icons-list-searchbar {
+  box-sizing: border-box;
+  appearance: none;
+  border: 0;
+  display: block;
+  width: 100%;
+  padding: 12px;
+  font-size: 1em;
+  background-color: #f0f0f0;
+  border-radius: 3px;
+  transition: background-color 0.3s;
+  outline: 0;
+
+  &:focus,
+  &:hover {
+    background-color: #e7e7e7;
+  }
+
+  *:focus-visible {
+    outline: auto;
+  }
+}
+
+@font-face {
+  font-family: 'MaterialCommunityIcons';
+  src: url('../../node_modules/react-native-vector-icons/Fonts/MaterialCommunityIcons.ttf') format('truetype');
+}
